--- a/pages/localhost/nl/template.html
+++ b/pages/localhost/nl/template.html
@@ -4,47 +4,74 @@
 <base href="http://localhost/module-page-editor/src/impl/resources/editor/clients/easydrain/pages/" target="_blank">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="viewport"
-	content="width=device-width, user-scalable=no, initial-scale=1, maximum-scale=1">
+  content="width=device-width, user-scalable=no, initial-scale=1, maximum-scale=1">
 <meta name="apple-mobile-web-app-capable" content="yes" />
 <title>Base theme</title>
-<link href="css/core.css" media="all" rel="stylesheet" type="text/css" />
-<link href="css/layout.css" media="all" rel="stylesheet" type="text/css" />
-<link href="css/media-queries.css" media="all" rel="stylesheet"
-	type="text/css" />
-<link href="css/menu.css" media="all" rel="stylesheet" type="text/css" />
+<link href="assets/css/core.css" media="all" rel="stylesheet" type="text/css" />
+<link href="assets/css/layout.css" media="all" rel="stylesheet" type="text/css" />
+<link href="assets/css/media-queries.css" media="all" rel="stylesheet"
+  type="text/css" />
+<link href="assets/css/menu.css" media="all" rel="stylesheet" type="text/css" />
 
 </head>
 <body>
 
-	<header role="banner">
-		<figure id="menu">
-			<img src="placeholders/menu_(960x125).jpg">
-		</figure>
-	</header>
+  <header role="banner">
+    <figure id="menu">
+      <img src="placeholders/menu_(960x125).jpg">
+    </figure>
+  </header>
 
-	<main role="main">
+  <main role="main">
 
-	<section id="main-section" class="content-area">
+  <section id="main-section" class="content-area">
+
+    <figure class="block" data-type="slider" data-size="940x430">
+      <img src="placeholders/Slider_top_(940x430).jpg">
+    </figure>
+
+    <figure class="block"  data-type="video-txt" data-size="620x430">
+      <img src="placeholders/video_(620x430).jpg">
+    </figure>
+
+    <figure class="block"  data-type="photo-txt" data-size="300x430">
+      <img src="placeholders/photo_(300x430).jpg">
+    </figure>
+
+    <figure class="block"  data-type="video-txt" data-size="300x430">
+      <img src="placeholders/video2_(300x430).jpg">
+    </figure>
+
+    <figure class="block" data-type="txt" data-size="620x430">
+      <img src="placeholders/txt_(620x430).jpg">
+    </figure>
+
+    <figure class="block" data-type="photo-txt" data-size="620x430">
+      <img src="placeholders/photo2_(620x430).jpg">
+    </figure>
+
+    <figure class="block" data-type="txt" data-size="300x430">
+      <img src="placeholders/txt2_(300x430).jpg">
+    </figure>
+
+    <div style="position: relative; height: 40px; clear: both;"></div>
+  </section>
 
 
-		<div style="position: relative; height: 40px; clear: both;"></div>
-	</section>
+  <footer role="contentinfo">
+    <nav role="navigation">
 
+      <figure id="menu">
+        <img src="placeholders/footer_mid_(940x380).jpg">
+      </figure>
 
-	<footer role="contentinfo">
-		<nav role="navigation">
+    </nav>
+  </footer> </main>
 
-			<figure id="menu">
-				<img src="placeholders/footer_mid_(940x380).jpg">
-			</figure>
+  <footer> </footer>
 
-		</nav>
-	</footer> </main>
-
-	<footer> </footer>
-
-	<script src="js/prefixfree.min.js"></script>
-	<script src="js/test.js"></script>
+  <script src="assets/js/prefixfree.min.js"></script>
+  <script src="../../../server/assets/js/context-menu.js"></script>
 
 </body>
 </html>
