--- a/pages/localhost/nl/template.html
+++ b/pages/localhost/nl/template.html
@@ -30,7 +30,7 @@
       <img src="placeholders/Slider_top_(940x430).jpg">
     </figure>
 
-    <figure class="block"  data-type="video-txt" data-size="620x430">
+    <figure class="block"  data-type="video" data-size="620x430">
       <img src="placeholders/video_(620x430).jpg">
     </figure>
 
@@ -38,7 +38,7 @@
       <img src="placeholders/photo_(300x430).jpg">
     </figure>
 
-    <figure class="block"  data-type="video-txt" data-size="300x430">
+    <figure class="block"  data-type="video" data-size="300x430">
       <img src="placeholders/video2_(300x430).jpg">
     </figure>
 
