--- a/pages/localhost/nl/template.html
+++ b/pages/localhost/nl/template.html
@@ -50,7 +50,7 @@
       <img src="placeholders/photo2_(620x430).jpg">
     </figure>
 
-    <figure class="block" data-type="txt" data-size="300x430">
+    <figure class="block" data-type="text" data-size="300x430">
       <img src="placeholders/txt2_(300x430).jpg">
     </figure>
 
