--- a/pages/localhost/nl/template.html
+++ b/pages/localhost/nl/template.html
@@ -7,7 +7,7 @@
   content="width=device-width, user-scalable=no, initial-scale=1, maximum-scale=1">
 <meta name="apple-mobile-web-app-capable" content="yes" />
 <title>Base theme</title>
-<link href="assets/css/core.css" media="all" rel="stylesheet" type="text/css" />
+<link href="/site/assets/css/core.css" media="all" rel="stylesheet" type="text/css" />
 <link href="assets/css/layout.css" media="all" rel="stylesheet" type="text/css" />
 <link href="assets/css/media-queries.css" media="all" rel="stylesheet"
   type="text/css" />
