--- a/pages/localhost/nl/template.html
+++ b/pages/localhost/nl/template.html
@@ -1,17 +1,17 @@
 <!doctype html>
 <html lang="en">
 <head>
-<base href="http://localhost/module-page-editor/src/impl/resources/editor/clients/easydrain/pages/" target="_blank">
+<base href="http://localhost:8080" target="_blank">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="viewport"
   content="width=device-width, user-scalable=no, initial-scale=1, maximum-scale=1">
 <meta name="apple-mobile-web-app-capable" content="yes" />
 <title>Base theme</title>
 <link href="/site/assets/css/core.css" media="all" rel="stylesheet" type="text/css" />
-<link href="assets/css/layout.css" media="all" rel="stylesheet" type="text/css" />
-<link href="assets/css/media-queries.css" media="all" rel="stylesheet"
+<link href="/site/assets/css/layout.css" media="all" rel="stylesheet" type="text/css" />
+<link href="/site/assets/css/media-queries.css" media="all" rel="stylesheet"
   type="text/css" />
-<link href="assets/css/menu.css" media="all" rel="stylesheet" type="text/css" />
+<link href="/site/assets/css/menu.css" media="all" rel="stylesheet" type="text/css" />
 
 </head>
 <body>
