--- a/pages/localhost/nl/template.html
+++ b/pages/localhost/nl/template.html
@@ -70,8 +70,8 @@
 
   <footer> </footer>
 
-  <script src="assets/js/prefixfree.min.js"></script>
-  <script src="../../../server/assets/js/context-menu.js"></script>
+  <script src="/static/plugins/editor/server/assets/js/prefixfree.min.js"></script>
+  <script src="/static/plugins/editor/server/assets/js/context-menu.js"></script>
 
 </body>
 </html>
