--- a/pages/localhost/nl/template.html
+++ b/pages/localhost/nl/template.html
@@ -120,7 +120,7 @@
   <div class="container">
     <div class="megafolio-container noborder norounded" id="main-section">
 
-      <div class="mega-entry cat-one cat-all sign block" data-type="video" data-src="/jaarplan-nieuw/svg-generator.php?img=sign&amp;txt=R%26D+Apollo,R%26D+Foseco,Ipsum+Energy,Mimetas" data-width="340" data-height="264">
+      <div class="mega-entry cat-one cat-all sign block" data-type="icon" data-src="/jaarplan-nieuw/svg-generator.php?img=sign&amp;txt=R%26D+Apollo,R%26D+Foseco,Ipsum+Energy,Mimetas" data-width="340" data-height="264">
         <div class="mega-covercaption mega-square-top mega-landscape-bottom mega-portrait-bottom">
           <div class="mega-title">Recent gevestigd in Twente of op Kennispark</div>
           <p>&nbsp;</p>
