--- a/pages/localhost/nl/template.html
+++ b/pages/localhost/nl/template.html
@@ -132,7 +132,7 @@
         </a>
       </div>
 
-      <div class="mega-entry cat-three cat-all patent" data-chart="bar" data-labels="2009,2012,2013" data-bars="nl,ov,tw" data-nl="6.9,6.7,6.7" data-ov="8.1,8.3,8.3" data-tw="9.7,10.0,10.1">
+      <div class="mega-entry cat-three cat-all patent block" data-type="barchart" data-chart="bar" data-labels="2009,2012,2013" data-bars="nl,ov,tw" data-nl="6.9,6.7,6.7" data-ov="8.1,8.3,8.3" data-tw="9.7,10.0,10.1">
         <div class="mega-covercaption mega-square-top mega-landscape-bottom mega-portrait-bottom">
           <div class="mega-title">Aandeel HTSM stijgt</div>
           <p>&nbsp;</p>
