added piechart to template

--- a/pages/localhost/nl/template.html
+++ b/pages/localhost/nl/template.html
@@ -207,7 +207,7 @@
         </a>
       </div>
 
-      <div class="mega-entry cat-four cat-all" data-chart="pie" data-labels="publiek,privaat" data-values="119486150,156315704" data-width="504" data-height="400">
+      <div class="mega-entry cat-four cat-all block" data-type="piechart" data-chart="pie" data-labels="publiek,privaat" data-values="119486150,156315704" data-width="504" data-height="400">
         <div class="mega-covercaption mega-square-top mega-landscape-bottom mega-portrait-bottom">
           <div class="mega-title">Investeringen innovatieprojecten</div>
           <div class="chart-div" id="jaarplan-investeringen-innovatie"><canvas height="180" width="392"></canvas></div>
